<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites_header">Favorites</string>
    <string name="add_places_fav">Add Places</string>
    <string name="alerts_header">Alerts</string>
    <string name="add_alerts">Add Alerts</string>
    <string name="setting_header">Setting</string>
    <string name="location_setting">Location</string>
    <string name="language_setting">Language</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="meter_sec">m/s</string>
    <string name="mile_hour">mi/h</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="addToFav_btn">Save</string>
    <string name="inital_setup">Initial Setup</string>
    <string name="save_btn">Save</string>

    <string name="home">Home</string>
    <string name="next_7_days">Next 7 Days</string>
    <string name="weather_details">Weather Details</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="visibility">Visibility</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirm">Delete Confirmation</string>
    <string name="delete_qustion">Are you sure you want to delete this item?</string>
    <string name="notValidMap">you must select a place or it can not locate</string>
    <string name="m">m</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="setup_alert">Setup Alert</string>
    <string name="endTimeAlert">End date must be after start date</string>
    <string name="weatherAlerts">Weather Alert</string>
    <string name="features">If you want to show alarm of alerts, you must turn on permission to show</string>

    <string name="noAlerts">Weather is fine, there is no alerts.</string>
    <string name="checkInternet">Check your internet connection</string>
    <string name="weather_alert">Weather Alert</string>
    <string name="dismiss">Dismiss</string>

</resources>